fix(content-explorer): Align copy button in ShareDialog

--- a/src/elements/content-explorer/ShareDialog.scss
+++ b/src/elements/content-explorer/ShareDialog.scss
@@ -28,6 +28,7 @@
     }
 
     .be-modal-button-copy {
+        min-width: 70px;
         height: 36px;
         margin: 0 0 0 -5px;
         padding: 0 10px;
